website/versioned_docs/version-2.3.x/features/data-acceleration/indexes.md
---
title: 'Indexes'
sidebar_label: 'Indexes'
sidebar_position: 1
description: 'Learn how to add indexes to local acceleration tables in Spice.'
---

Database indexes are essential for optimizing query performance. This document explains how to add indexes to tables created by Spice for local data acceleration.

Example Spicepod:

```yaml
datasets:
  - from: spice.ai/eth.recent_blocks
    name: eth.recent_blocks
    acceleration:
      enabled: true
      engine: sqlite
      indexes:
        number: enabled # Index the `number` column
        '(hash, timestamp)': unique # Add a unique index with a multicolumn key comprised of the `hash` and `timestamp` columns
```

## Column References

Column references can be used to specify which columns to index. The column reference can be a single column name or a multicolumn key. A multicolumn key is a comma-separated list of column names, and the enclosing parentheses are optional.

Examples

- `number`: Index the `number` column
- `(hash, timestamp)`: Index the `hash` and `timestamp` columns
- `"service.instance.id"`: Index the `service.instance.id` column, written with the quotes SQL uses

A column name may be double-quoted, and the quotes are not part of the name. Names are matched against the schema's field names as written rather than parsed as SQL identifiers, and a column whose name contains `,`, `;`, `:`, `(`, `)` or `"` cannot be referenced. See [Column names](./constraints#column-names) for the full rules, which are shared by `indexes`, `primary_key` and `on_conflict`.

## Index Types

There are two types of indexes that can be specified in a Spicepod:

- `enabled`: Creates a standard index on the specified column(s).
  - Similar to specifying `CREATE INDEX my_index ON my_table (my_column)`.
- `unique`: Creates a unique index on the specified column(s). See [Constraints](./constraints) for more information on working with unique constraints on locally accelerated tables.
  - Similar to specifying `CREATE UNIQUE INDEX my_index ON my_table (my_column)`.

:::warning[Limitations]

Traditional indexes are not supported for the in-memory Arrow acceleration engine. Use [DuckDB](../../components/data-accelerators/duckdb), [SQLite](../../components/data-accelerators/sqlite), [Turso](../../components/data-accelerators/turso), or [PostgreSQL](../../components/data-accelerators/postgres) as the acceleration engine to enable indexing.

[Spice Cayenne](../../components/data-accelerators/cayenne) reads `indexes` and builds a secondary index per entry, but the index is a read-path structure rather than a database index — a `unique` entry does not constrain writes. See [Secondary indexes](../../components/data-accelerators/cayenne#secondary-indexes).

For Arrow acceleration, see [Hash Index](./hash-index) (experimental, v1.11.0-rc.2+) for O(1) point lookups on primary key columns.

:::

:::tip[Spice Cayenne Point Lookup Performance]

Even without `indexes`, [Vortex](https://github.com/vortex-data/vortex) provides [100x faster random access reads](https://bench.vortex.dev) compared to Parquet through segment statistics (similar to zone-maps), fast random access encodings ([FSST](https://www.vldb.org/pvldb/vol13/p2649-boncz.pdf), [FastLanes](https://www.vldb.org/pvldb/vol16/p2132-afroozeh.pdf)), and compute push-down on compressed data. For many point lookup workloads, Spice Cayenne matches or exceeds indexed query performance without requiring explicit index configuration. See the [Spice Cayenne documentation](../../components/data-accelerators/cayenne#point-lookups-and-random-access) for details.

:::
